# soop-discoard-bot

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_guild_streamers.py  0002_add_settings_and_live_status.py  0003_add_broad_no_to_live_status.py  0004_add_embed_template_fields.py  0005_add_mentions_to_guild_settings.py  0006_add_last_notified_to_live_status.py  0007_add_poll_state_table.py  0008_add_moderation_settings.py
scripts/: start_all.sh  validate_env.py
src/soop_discord_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/soop_discord_bot/app/: main.py
src/soop_discord_bot/bot/: __main__.py
src/soop_discord_bot/core/: config.py  notifier.py  storage.py
src/soop_discord_bot/soop/: __init__.py  client.py  poller.py
src/soupnotify/: __init__.py
src/soupnotify/app/: main.py
src/soupnotify/bot/: __init__.py  __main__.py
src/soupnotify/bot/cogs/: admin.py  help.py  linking.py  links.py  notifications.py  templates.py
src/soupnotify/core/: audit.py  command_log.py  config.py  discord_utils.py  embeds.py  metrics.py  notifier.py  permissions.py  rate_limit.py  render.py  storage.py
src/soupnotify/soop/: client.py  poller.py
tests/: conftest.py  test_poller.py  test_storage.py
